--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">AlfiXD<span>Dev</span></div>
+        <div class="logo">AlfiXD<span>Nih Dek</span></div>
         <ul class="nav-links">
           <li><a href="#home" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -231,7 +231,7 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <div class="footer-logo">AlfiXD<span>Dev</span></div>
+        <div class="footer-logo">AlfiXD<span>Nih Dek</span></div>
         <div class="footer-social">
           <a href="https://github.com/Fiisya" target="_blank"><i class="fab fa-github"></i></a>
           <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
