--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
           </div>
           <div class="social-links">
             <a href="https://github.com/Fiisya" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://whatsapp.com/channel/0029Vb4fjWE1yT25R7epR110" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://t.me/alfisyahrial" target="_blank"><i class="fab fa-telegram"></i></a>
+            <a href="https://instagram.com/alfisyahriaal" target="_blank"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
         <div class="hero-image">
@@ -231,7 +231,7 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <div class="footer-logo">AlfiXD<span>XD</span></div>
+        <div class="footer-logo">Alfi<span>XD</span></div>
         <div class="footer-social">
           <a href="https://github.com/Fiisya" target="_blank"><i class="fab fa-github"></i></a>
           <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
