--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <div class="hero-text">
           <h1>Hi, I'm <span id="user-name">AlfiXD</span></h1>
           <h2 id="user-bio">Developer & Programmer</h2>
-          <p>I build things for the web and mobile platforms</p>
+          <p>rest api and bot developers</p>
           <div class="hero-btns">
             <a href="#projects" class="btn primary-btn">View My Work</a>
             <a href="#contact" class="btn secondary-btn">Contact Me</a>
@@ -66,8 +66,8 @@
       </div>
       <div class="about-content">
         <div class="about-text">
-          <p>I'm a passionate developer focused on creating clean, efficient, and user-friendly applications. With a strong foundation in both frontend and backend technologies, I enjoy solving complex problems and building innovative solutions.</p>
-          <p>My journey in programming started with a curiosity about how things work, which led me to explore various technologies and programming languages. I'm constantly learning and improving my skills to stay updated with the latest industry trends.</p>
+          <p>I am an enthusiastic developer, focused on clean, efficient, and user-friendly REST APIs and bots. With a strong foundation in both frontend and backend technologies, I enjoy solving complex problems and building innovative solutions.</p>
+          <p>My journey in developing REST APIs and bots began with curiosity about how everything works, which drove me to explore various technologies and programming languages. I continuously learn and enhance my skills to stay up-to-date with the latest industry trends.</p>
           <div class="github-stats">
             <div class="stat">
               <span id="repos-count">0</span>
@@ -109,10 +109,6 @@
               <div class="skill-icon"><i class="fab fa-js"></i></div>
               <h4>JavaScript</h4>
             </div>
-            <div class="skill-item">
-              <div class="skill-icon"><i class="fab fa-react"></i></div>
-              <h4>React</h4>
-            </div>
           </div>
         </div>
         <div class="skill-category">
@@ -130,10 +126,6 @@
               <div class="skill-icon"><i class="fas fa-database"></i></div>
               <h4>MongoDB</h4>
             </div>
-            <div class="skill-item">
-              <div class="skill-icon"><i class="fas fa-database"></i></div>
-              <h4>MySQL</h4>
-            </div>
           </div>
         </div>
         <div class="skill-category">
@@ -146,14 +138,6 @@
             <div class="skill-item">
               <div class="skill-icon"><i class="fab fa-docker"></i></div>
               <h4>Docker</h4>
-            </div>
-            <div class="skill-item">
-              <div class="skill-icon"><i class="fas fa-mobile-alt"></i></div>
-              <h4>Mobile Dev</h4>
-            </div>
-            <div class="skill-item">
-              <div class="skill-icon"><i class="fas fa-cloud"></i></div>
-              <h4>Cloud</h4>
             </div>
           </div>
         </div>
@@ -234,9 +218,9 @@
         <div class="footer-logo">Alfi<span>XD</span></div>
         <div class="footer-social">
           <a href="https://github.com/Fiisya" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://whatsapp.com/channel/0029Vb4fjWE1yT25R7epR110" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://t.me/alfisyahrial" target="_blank"><i class="fab fa-telegram"></i></a>
+            <a href="https://instagram.com/alfisyahriaal" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="footer-bottom">
