--- a/public/index.html
+++ b/public/index.html
@@ -123,8 +123,12 @@
               <h4>Express</h4>
             </div>
             <div class="skill-item">
-              <div class="skill-icon"><i class="fas fa-database"></i></div>
-              <h4>MongoDB</h4>
+              <div class="skill-icon"><i class="fab fa-python"></i></div>
+              <h4>Python</h4>
+            </div>
+            <div class="skill-item">
+              <div class="skill-icon"><i class="fab fa-golang"></i></div>
+              <h4>Golang</h4>
             </div>
           </div>
         </div>
